<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.barcodereadertest.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:gravity="center"
    android:orientation="vertical">

    
  	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_text_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button_label" />
    </LinearLayout>
  	
  	<Button
            android:id="@+id/search_with_barcode_reader_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_with_barcode_reader_button_label"/>  
            
  	
  	<ListView
        android:id="@+id/result_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
